// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Browser instance 1`] = `
<Browser
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  home="about:blank"
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClip={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  uri="about:blank"
  url="http://example.com"
  useparser={false}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#c0c0c0",
      }
    }
  >
    <styled.div
      className="ui-browser"
    >
      <div
        className="ui-browser sc-gzVnrw hXlKye"
      >
        <Styled(Toolbar)
          className="ui-browser-toolbar"
        >
          <Toolbar
            className="ui-browser-toolbar sc-dnqmqq kAnlkt"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            id=""
            justify={0}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            theme={Object {}}
            visible={true}
            width=""
            xcss={null}
          >
            <div
              className="ui-toolbar toolbar normal ui-browser-toolbar sc-dnqmqq kAnlkt"
            >
              <div
                className="ui-toolbar-group toolbarGroup left"
              >
                <Button
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="arrow-left"
                  iconStyle=""
                  id=""
                  key="0"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "border": "solid 1px silver",
                      "height": "24px",
                      "margin": "0 1px 0 2px",
                      "width": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "hoverColor": "#c0c0c0",
                      }
                    }
                  >
                    <styled.div
                      className="ui-button ripple toolbarElement"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "solid 1px silver",
                          "height": "24px",
                          "margin": "0 1px 0 2px",
                          "width": "24px",
                        }
                      }
                      visible={true}
                    >
                      <div
                        className="ui-button ripple toolbarElement sc-bdVaJa lbXAqQ"
                        disabled={false}
                        onClick={[Function]}
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                            "margin": "0 1px 0 2px",
                            "width": "24px",
                          }
                        }
                      >
                        <Icon
                          className=""
                          contentEditable={false}
                          direction="right"
                          disabled={false}
                          focus={false}
                          height=""
                          iconName="arrow-left"
                          id=""
                          imageFile=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#004358",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "hoverColor": "#c0c0c0",
                              }
                            }
                          >
                            <Icon__FontAwesome
                              className="ui-icon fa fa-fw fa-arrow-left"
                              sizing="normal"
                              style={Object {}}
                            >
                              <i
                                className="ui-icon fa fa-fw fa-arrow-left Icon__FontAwesome-kBRBjz dGlSoR"
                                style={Object {}}
                              />
                            </Icon__FontAwesome>
                          </ThemeProvider>
                        </Icon>
                      </div>
                    </styled.div>
                  </ThemeProvider>
                </Button>
                <Button
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="arrow-right"
                  iconStyle=""
                  id=""
                  key="1"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "border": "solid 1px silver",
                      "height": "24px",
                      "margin": "0 1px 0 2px",
                      "width": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "hoverColor": "#c0c0c0",
                      }
                    }
                  >
                    <styled.div
                      className="ui-button ripple toolbarElement"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "solid 1px silver",
                          "height": "24px",
                          "margin": "0 1px 0 2px",
                          "width": "24px",
                        }
                      }
                      visible={true}
                    >
                      <div
                        className="ui-button ripple toolbarElement sc-bdVaJa lbXAqQ"
                        disabled={false}
                        onClick={[Function]}
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                            "margin": "0 1px 0 2px",
                            "width": "24px",
                          }
                        }
                      >
                        <Icon
                          className=""
                          contentEditable={false}
                          direction="right"
                          disabled={false}
                          focus={false}
                          height=""
                          iconName="arrow-right"
                          id=""
                          imageFile=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#004358",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "hoverColor": "#c0c0c0",
                              }
                            }
                          >
                            <Icon__FontAwesome
                              className="ui-icon fa fa-fw fa-arrow-right"
                              sizing="normal"
                              style={Object {}}
                            >
                              <i
                                className="ui-icon fa fa-fw fa-arrow-right Icon__FontAwesome-kBRBjz dGlSoR"
                                style={Object {}}
                              />
                            </Icon__FontAwesome>
                          </ThemeProvider>
                        </Icon>
                      </div>
                    </styled.div>
                  </ThemeProvider>
                </Button>
                <Button
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="refresh"
                  iconStyle=""
                  id=""
                  key="2"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "border": "solid 1px silver",
                      "height": "24px",
                      "margin": "0 1px 0 2px",
                      "width": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "hoverColor": "#c0c0c0",
                      }
                    }
                  >
                    <styled.div
                      className="ui-button ripple toolbarElement"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "solid 1px silver",
                          "height": "24px",
                          "margin": "0 1px 0 2px",
                          "width": "24px",
                        }
                      }
                      visible={true}
                    >
                      <div
                        className="ui-button ripple toolbarElement sc-bdVaJa lbXAqQ"
                        disabled={false}
                        onClick={[Function]}
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                            "margin": "0 1px 0 2px",
                            "width": "24px",
                          }
                        }
                      >
                        <Icon
                          className=""
                          contentEditable={false}
                          direction="right"
                          disabled={false}
                          focus={false}
                          height=""
                          iconName="refresh"
                          id=""
                          imageFile=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#004358",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "hoverColor": "#c0c0c0",
                              }
                            }
                          >
                            <Icon__FontAwesome
                              className="ui-icon fa fa-fw fa-refresh"
                              sizing="normal"
                              style={Object {}}
                            >
                              <i
                                className="ui-icon fa fa-fw fa-refresh Icon__FontAwesome-kBRBjz dGlSoR"
                                style={Object {}}
                              />
                            </Icon__FontAwesome>
                          </ThemeProvider>
                        </Icon>
                      </div>
                    </styled.div>
                  </ThemeProvider>
                </Button>
                <Divider
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  dividerType=" "
                  focus={false}
                  height=""
                  id=""
                  key="3"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "height": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <div
                    className="ui-divider divider normal toolbarElement"
                    style={
                      Object {
                        "height": "24px",
                        "width": "8px",
                      }
                    }
                  >
                     
                  </div>
                </Divider>
                <Button
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="home"
                  iconStyle=""
                  id=""
                  key="4"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "border": "solid 1px silver",
                      "height": "24px",
                      "margin": "0 1px 0 2px",
                      "width": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "hoverColor": "#c0c0c0",
                      }
                    }
                  >
                    <styled.div
                      className="ui-button ripple toolbarElement"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "solid 1px silver",
                          "height": "24px",
                          "margin": "0 1px 0 2px",
                          "width": "24px",
                        }
                      }
                      visible={true}
                    >
                      <div
                        className="ui-button ripple toolbarElement sc-bdVaJa lbXAqQ"
                        disabled={false}
                        onClick={[Function]}
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                            "margin": "0 1px 0 2px",
                            "width": "24px",
                          }
                        }
                      >
                        <Icon
                          className=""
                          contentEditable={false}
                          direction="right"
                          disabled={false}
                          focus={false}
                          height=""
                          iconName="home"
                          id=""
                          imageFile=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#004358",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "hoverColor": "#c0c0c0",
                              }
                            }
                          >
                            <Icon__FontAwesome
                              className="ui-icon fa fa-fw fa-home"
                              sizing="normal"
                              style={Object {}}
                            >
                              <i
                                className="ui-icon fa fa-fw fa-home Icon__FontAwesome-kBRBjz dGlSoR"
                                style={Object {}}
                              />
                            </Icon__FontAwesome>
                          </ThemeProvider>
                        </Icon>
                      </div>
                    </styled.div>
                  </ThemeProvider>
                </Button>
                <Styled(TextField)
                  className="toolbarElement"
                  disabled={false}
                  key="5"
                  onChange={[Function]}
                  onKeyPress={[Function]}
                  sizing="normal"
                  style={
                    Object {
                      "height": "24px",
                    }
                  }
                  value="about:blank"
                  visible={true}
                >
                  <TextField
                    className="toolbarElement sc-iwsKbI jiBwds"
                    disabled={false}
                    id=""
                    noborder={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onValidation={[Function]}
                    sizing="normal"
                    style={
                      Object {
                        "height": "24px",
                      }
                    }
                    type="text"
                    useclear={false}
                    usevalidation={false}
                    validators={Array []}
                    value="about:blank"
                    visible={true}
                  >
                    <div
                      className="ui-textfield-container textFieldContainer"
                    >
                      <div
                        className="ui-textfield textField normal toolbarElement sc-iwsKbI jiBwds"
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                          }
                        }
                      >
                        <input
                          className="textFieldInput"
                          disabled={false}
                          id=""
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={
                            Object {
                              "height": "24px",
                            }
                          }
                          type="text"
                          value="about:blank"
                        />
                      </div>
                    </div>
                  </TextField>
                </Styled(TextField)>
                <Button
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="camera-retro"
                  iconStyle=""
                  id=""
                  key="6"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "border": "solid 1px silver",
                      "height": "24px",
                      "margin": "0 1px 0 2px",
                      "width": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "hoverColor": "#c0c0c0",
                      }
                    }
                  >
                    <styled.div
                      className="ui-button ripple toolbarElement"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "solid 1px silver",
                          "height": "24px",
                          "margin": "0 1px 0 2px",
                          "width": "24px",
                        }
                      }
                      visible={true}
                    >
                      <div
                        className="ui-button ripple toolbarElement sc-bdVaJa lbXAqQ"
                        disabled={false}
                        onClick={[Function]}
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                            "margin": "0 1px 0 2px",
                            "width": "24px",
                          }
                        }
                      >
                        <Icon
                          className=""
                          contentEditable={false}
                          direction="right"
                          disabled={false}
                          focus={false}
                          height=""
                          iconName="camera-retro"
                          id=""
                          imageFile=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#004358",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "hoverColor": "#c0c0c0",
                              }
                            }
                          >
                            <Icon__FontAwesome
                              className="ui-icon fa fa-fw fa-camera-retro"
                              sizing="normal"
                              style={Object {}}
                            >
                              <i
                                className="ui-icon fa fa-fw fa-camera-retro Icon__FontAwesome-kBRBjz dGlSoR"
                                style={Object {}}
                              />
                            </Icon__FontAwesome>
                          </ThemeProvider>
                        </Icon>
                      </div>
                    </styled.div>
                  </ThemeProvider>
                </Button>
                <Divider
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  dividerType=" "
                  focus={false}
                  height=""
                  id=""
                  key="7"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "height": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <div
                    className="ui-divider divider normal toolbarElement"
                    style={
                      Object {
                        "height": "24px",
                        "width": "8px",
                      }
                    }
                  >
                     
                  </div>
                </Divider>
                <Styled(TextField)
                  className="toolbarElement"
                  disabled={false}
                  key="8"
                  onChange={[Function]}
                  placeholder="search"
                  sizing="normal"
                  style={
                    Object {
                      "height": "24px",
                    }
                  }
                  useclear={true}
                  value=""
                  visible={true}
                >
                  <TextField
                    className="toolbarElement sc-gZMcBi gXsQOQ"
                    disabled={false}
                    id=""
                    noborder={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onValidation={[Function]}
                    placeholder="search"
                    sizing="normal"
                    style={
                      Object {
                        "height": "24px",
                      }
                    }
                    type="text"
                    useclear={true}
                    usevalidation={false}
                    validators={Array []}
                    value=""
                    visible={true}
                  >
                    <div
                      className="ui-textfield-container textFieldContainer"
                    >
                      <div
                        className="ui-textfield textField normal toolbarElement sc-gZMcBi gXsQOQ"
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                          }
                        }
                      >
                        <input
                          className="textFieldInput"
                          disabled={false}
                          id=""
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          placeholder="search"
                          style={
                            Object {
                              "height": "24px",
                            }
                          }
                          type="text"
                          value=""
                        />
                        <div
                          className="ui-textfield-clear-button clearButton normal"
                        >
                          <ButtonCircle
                            className=""
                            contentEditable={false}
                            direction="right"
                            disabled={false}
                            focus={false}
                            height=""
                            iconName="times"
                            iconStyle=""
                            id=""
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            onClick={[Function]}
                            selected={false}
                            sizing="small"
                            style={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#d9534f",
                                "color": "#d9534f",
                              }
                            }
                            testing={true}
                            theme={Object {}}
                            visible={true}
                            width=""
                            xcss={null}
                          >
                            <ThemeProvider
                              theme={
                                Object {
                                  "backgroundColor": "#ffffff",
                                  "borderColor": "#004358",
                                  "color": "#000000",
                                  "headerBackgroundColor": "#004358",
                                  "headerForegroundColor": "#ffffff",
                                  "hoverColor": "#c0c0c0",
                                }
                              }
                            >
                              <styled.div
                                className="ui-button-circle"
                              >
                                <div
                                  className="ui-button-circle sc-bwzfXH Rlnso"
                                >
                                  <styled.div
                                    height="18px"
                                    width="18px"
                                  >
                                    <div
                                      className="sc-htpNat cmTRcR"
                                      height="18px"
                                      width="18px"
                                    >
                                      <Styled(Button)
                                        className=""
                                        contentEditable={false}
                                        direction="right"
                                        disabled={false}
                                        focus={false}
                                        height=""
                                        iconName="times"
                                        iconStyle=""
                                        id=""
                                        location="none"
                                        noedit={false}
                                        nohover={false}
                                        noripple={false}
                                        onClick={[Function]}
                                        selected={false}
                                        sizing="small"
                                        style={
                                          Object {
                                            "backgroundColor": "#ffffff",
                                            "borderColor": "#d9534f",
                                            "color": "#d9534f",
                                          }
                                        }
                                        testing={true}
                                        theme={Object {}}
                                        visible={true}
                                        width=""
                                        xcss={null}
                                      >
                                        <Button
                                          className="sc-bxivhb fCnJYX"
                                          contentEditable={false}
                                          direction="right"
                                          disabled={false}
                                          focus={false}
                                          height=""
                                          iconName="times"
                                          iconStyle=""
                                          id=""
                                          location="none"
                                          noedit={false}
                                          nohover={false}
                                          noripple={false}
                                          onClick={[Function]}
                                          selected={false}
                                          sizing="small"
                                          style={
                                            Object {
                                              "backgroundColor": "#ffffff",
                                              "borderColor": "#d9534f",
                                              "color": "#d9534f",
                                            }
                                          }
                                          testing={true}
                                          theme={Object {}}
                                          visible={true}
                                          width=""
                                          xcss={null}
                                        >
                                          <ThemeProvider
                                            theme={
                                              Object {
                                                "backgroundColor": "#ffffff",
                                                "borderColor": "#004358",
                                                "color": "#000000",
                                                "headerBackgroundColor": "#004358",
                                                "headerForegroundColor": "#ffffff",
                                                "hoverColor": "#c0c0c0",
                                              }
                                            }
                                          >
                                            <styled.div
                                              className="ui-button ripple sc-bxivhb fCnJYX"
                                              disabled={false}
                                              onClick={[Function]}
                                              style={
                                                Object {
                                                  "backgroundColor": "#ffffff",
                                                  "borderColor": "#d9534f",
                                                  "color": "#d9534f",
                                                }
                                              }
                                              visible={true}
                                            >
                                              <div
                                                className="ui-button ripple sc-bxivhb fCnJYX sc-bdVaJa crSebe"
                                                disabled={false}
                                                onClick={[Function]}
                                                style={
                                                  Object {
                                                    "backgroundColor": "#ffffff",
                                                    "borderColor": "#d9534f",
                                                    "color": "#d9534f",
                                                  }
                                                }
                                              >
                                                <Icon
                                                  className=""
                                                  contentEditable={false}
                                                  direction="right"
                                                  disabled={false}
                                                  focus={false}
                                                  height=""
                                                  iconName="times"
                                                  id=""
                                                  imageFile=""
                                                  location="none"
                                                  noedit={false}
                                                  nohover={false}
                                                  noripple={false}
                                                  selected={false}
                                                  sizing="small"
                                                  style={Object {}}
                                                  testing={true}
                                                  theme={Object {}}
                                                  visible={true}
                                                  width=""
                                                  xcss={null}
                                                >
                                                  <ThemeProvider
                                                    theme={
                                                      Object {
                                                        "backgroundColor": "#ffffff",
                                                        "borderColor": "#004358",
                                                        "color": "#000000",
                                                        "headerBackgroundColor": "#004358",
                                                        "headerForegroundColor": "#ffffff",
                                                        "hoverColor": "#c0c0c0",
                                                      }
                                                    }
                                                  >
                                                    <Icon__FontAwesome
                                                      className="ui-icon fa fa-fw fa-times"
                                                      sizing="small"
                                                      style={Object {}}
                                                    >
                                                      <i
                                                        className="ui-icon fa fa-fw fa-times Icon__FontAwesome-kBRBjz ftTmck"
                                                        style={Object {}}
                                                      />
                                                    </Icon__FontAwesome>
                                                  </ThemeProvider>
                                                </Icon>
                                              </div>
                                            </styled.div>
                                          </ThemeProvider>
                                        </Button>
                                      </Styled(Button)>
                                    </div>
                                  </styled.div>
                                </div>
                              </styled.div>
                            </ThemeProvider>
                          </ButtonCircle>
                        </div>
                      </div>
                    </div>
                  </TextField>
                </Styled(TextField)>
              </div>
            </div>
          </Toolbar>
        </Styled(Toolbar)>
        <styled.div
          innerRef={[Function]}
        >
          <div
            className="sc-htoDjs ctMbKA"
          />
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</Browser>
`;

exports[`Test creation of a Browser instance with empty uri values 1`] = `
<Browser
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  home=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClip={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  uri="about:blank"
  url=""
  useparser={false}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#c0c0c0",
      }
    }
  >
    <styled.div
      className="ui-browser"
    >
      <div
        className="ui-browser sc-gzVnrw hXlKye"
      >
        <Styled(Toolbar)
          className="ui-browser-toolbar"
        >
          <Toolbar
            className="ui-browser-toolbar sc-dnqmqq kAnlkt"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            id=""
            justify={0}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            theme={Object {}}
            visible={true}
            width=""
            xcss={null}
          >
            <div
              className="ui-toolbar toolbar normal ui-browser-toolbar sc-dnqmqq kAnlkt"
            >
              <div
                className="ui-toolbar-group toolbarGroup left"
              >
                <Button
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="arrow-left"
                  iconStyle=""
                  id=""
                  key="0"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "border": "solid 1px silver",
                      "height": "24px",
                      "margin": "0 1px 0 2px",
                      "width": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "hoverColor": "#c0c0c0",
                      }
                    }
                  >
                    <styled.div
                      className="ui-button ripple toolbarElement"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "solid 1px silver",
                          "height": "24px",
                          "margin": "0 1px 0 2px",
                          "width": "24px",
                        }
                      }
                      visible={true}
                    >
                      <div
                        className="ui-button ripple toolbarElement sc-bdVaJa lbXAqQ"
                        disabled={false}
                        onClick={[Function]}
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                            "margin": "0 1px 0 2px",
                            "width": "24px",
                          }
                        }
                      >
                        <Icon
                          className=""
                          contentEditable={false}
                          direction="right"
                          disabled={false}
                          focus={false}
                          height=""
                          iconName="arrow-left"
                          id=""
                          imageFile=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#004358",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "hoverColor": "#c0c0c0",
                              }
                            }
                          >
                            <Icon__FontAwesome
                              className="ui-icon fa fa-fw fa-arrow-left"
                              sizing="normal"
                              style={Object {}}
                            >
                              <i
                                className="ui-icon fa fa-fw fa-arrow-left Icon__FontAwesome-kBRBjz dGlSoR"
                                style={Object {}}
                              />
                            </Icon__FontAwesome>
                          </ThemeProvider>
                        </Icon>
                      </div>
                    </styled.div>
                  </ThemeProvider>
                </Button>
                <Button
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="arrow-right"
                  iconStyle=""
                  id=""
                  key="1"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "border": "solid 1px silver",
                      "height": "24px",
                      "margin": "0 1px 0 2px",
                      "width": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "hoverColor": "#c0c0c0",
                      }
                    }
                  >
                    <styled.div
                      className="ui-button ripple toolbarElement"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "solid 1px silver",
                          "height": "24px",
                          "margin": "0 1px 0 2px",
                          "width": "24px",
                        }
                      }
                      visible={true}
                    >
                      <div
                        className="ui-button ripple toolbarElement sc-bdVaJa lbXAqQ"
                        disabled={false}
                        onClick={[Function]}
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                            "margin": "0 1px 0 2px",
                            "width": "24px",
                          }
                        }
                      >
                        <Icon
                          className=""
                          contentEditable={false}
                          direction="right"
                          disabled={false}
                          focus={false}
                          height=""
                          iconName="arrow-right"
                          id=""
                          imageFile=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#004358",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "hoverColor": "#c0c0c0",
                              }
                            }
                          >
                            <Icon__FontAwesome
                              className="ui-icon fa fa-fw fa-arrow-right"
                              sizing="normal"
                              style={Object {}}
                            >
                              <i
                                className="ui-icon fa fa-fw fa-arrow-right Icon__FontAwesome-kBRBjz dGlSoR"
                                style={Object {}}
                              />
                            </Icon__FontAwesome>
                          </ThemeProvider>
                        </Icon>
                      </div>
                    </styled.div>
                  </ThemeProvider>
                </Button>
                <Button
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="refresh"
                  iconStyle=""
                  id=""
                  key="2"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "border": "solid 1px silver",
                      "height": "24px",
                      "margin": "0 1px 0 2px",
                      "width": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "hoverColor": "#c0c0c0",
                      }
                    }
                  >
                    <styled.div
                      className="ui-button ripple toolbarElement"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "solid 1px silver",
                          "height": "24px",
                          "margin": "0 1px 0 2px",
                          "width": "24px",
                        }
                      }
                      visible={true}
                    >
                      <div
                        className="ui-button ripple toolbarElement sc-bdVaJa lbXAqQ"
                        disabled={false}
                        onClick={[Function]}
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                            "margin": "0 1px 0 2px",
                            "width": "24px",
                          }
                        }
                      >
                        <Icon
                          className=""
                          contentEditable={false}
                          direction="right"
                          disabled={false}
                          focus={false}
                          height=""
                          iconName="refresh"
                          id=""
                          imageFile=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#004358",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "hoverColor": "#c0c0c0",
                              }
                            }
                          >
                            <Icon__FontAwesome
                              className="ui-icon fa fa-fw fa-refresh"
                              sizing="normal"
                              style={Object {}}
                            >
                              <i
                                className="ui-icon fa fa-fw fa-refresh Icon__FontAwesome-kBRBjz dGlSoR"
                                style={Object {}}
                              />
                            </Icon__FontAwesome>
                          </ThemeProvider>
                        </Icon>
                      </div>
                    </styled.div>
                  </ThemeProvider>
                </Button>
                <Divider
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  dividerType=" "
                  focus={false}
                  height=""
                  id=""
                  key="3"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "height": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <div
                    className="ui-divider divider normal toolbarElement"
                    style={
                      Object {
                        "height": "24px",
                        "width": "8px",
                      }
                    }
                  >
                     
                  </div>
                </Divider>
                <Button
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="home"
                  iconStyle=""
                  id=""
                  key="4"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "border": "solid 1px silver",
                      "height": "24px",
                      "margin": "0 1px 0 2px",
                      "width": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "hoverColor": "#c0c0c0",
                      }
                    }
                  >
                    <styled.div
                      className="ui-button ripple toolbarElement"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "solid 1px silver",
                          "height": "24px",
                          "margin": "0 1px 0 2px",
                          "width": "24px",
                        }
                      }
                      visible={true}
                    >
                      <div
                        className="ui-button ripple toolbarElement sc-bdVaJa lbXAqQ"
                        disabled={false}
                        onClick={[Function]}
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                            "margin": "0 1px 0 2px",
                            "width": "24px",
                          }
                        }
                      >
                        <Icon
                          className=""
                          contentEditable={false}
                          direction="right"
                          disabled={false}
                          focus={false}
                          height=""
                          iconName="home"
                          id=""
                          imageFile=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#004358",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "hoverColor": "#c0c0c0",
                              }
                            }
                          >
                            <Icon__FontAwesome
                              className="ui-icon fa fa-fw fa-home"
                              sizing="normal"
                              style={Object {}}
                            >
                              <i
                                className="ui-icon fa fa-fw fa-home Icon__FontAwesome-kBRBjz dGlSoR"
                                style={Object {}}
                              />
                            </Icon__FontAwesome>
                          </ThemeProvider>
                        </Icon>
                      </div>
                    </styled.div>
                  </ThemeProvider>
                </Button>
                <Styled(TextField)
                  className="toolbarElement"
                  disabled={false}
                  key="5"
                  onChange={[Function]}
                  onKeyPress={[Function]}
                  sizing="normal"
                  style={
                    Object {
                      "height": "24px",
                    }
                  }
                  value="about:blank"
                  visible={true}
                >
                  <TextField
                    className="toolbarElement sc-iwsKbI jiBwds"
                    disabled={false}
                    id=""
                    noborder={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onValidation={[Function]}
                    sizing="normal"
                    style={
                      Object {
                        "height": "24px",
                      }
                    }
                    type="text"
                    useclear={false}
                    usevalidation={false}
                    validators={Array []}
                    value="about:blank"
                    visible={true}
                  >
                    <div
                      className="ui-textfield-container textFieldContainer"
                    >
                      <div
                        className="ui-textfield textField normal toolbarElement sc-iwsKbI jiBwds"
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                          }
                        }
                      >
                        <input
                          className="textFieldInput"
                          disabled={false}
                          id=""
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={
                            Object {
                              "height": "24px",
                            }
                          }
                          type="text"
                          value="about:blank"
                        />
                      </div>
                    </div>
                  </TextField>
                </Styled(TextField)>
                <Button
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="camera-retro"
                  iconStyle=""
                  id=""
                  key="6"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "border": "solid 1px silver",
                      "height": "24px",
                      "margin": "0 1px 0 2px",
                      "width": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "hoverColor": "#c0c0c0",
                      }
                    }
                  >
                    <styled.div
                      className="ui-button ripple toolbarElement"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "solid 1px silver",
                          "height": "24px",
                          "margin": "0 1px 0 2px",
                          "width": "24px",
                        }
                      }
                      visible={true}
                    >
                      <div
                        className="ui-button ripple toolbarElement sc-bdVaJa lbXAqQ"
                        disabled={false}
                        onClick={[Function]}
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                            "margin": "0 1px 0 2px",
                            "width": "24px",
                          }
                        }
                      >
                        <Icon
                          className=""
                          contentEditable={false}
                          direction="right"
                          disabled={false}
                          focus={false}
                          height=""
                          iconName="camera-retro"
                          id=""
                          imageFile=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <ThemeProvider
                            theme={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#004358",
                                "color": "#000000",
                                "headerBackgroundColor": "#004358",
                                "headerForegroundColor": "#ffffff",
                                "hoverColor": "#c0c0c0",
                              }
                            }
                          >
                            <Icon__FontAwesome
                              className="ui-icon fa fa-fw fa-camera-retro"
                              sizing="normal"
                              style={Object {}}
                            >
                              <i
                                className="ui-icon fa fa-fw fa-camera-retro Icon__FontAwesome-kBRBjz dGlSoR"
                                style={Object {}}
                              />
                            </Icon__FontAwesome>
                          </ThemeProvider>
                        </Icon>
                      </div>
                    </styled.div>
                  </ThemeProvider>
                </Button>
                <Divider
                  className="toolbarElement"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  dividerType=" "
                  focus={false}
                  height=""
                  id=""
                  key="7"
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "height": "24px",
                    }
                  }
                  testing={true}
                  theme={Object {}}
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <div
                    className="ui-divider divider normal toolbarElement"
                    style={
                      Object {
                        "height": "24px",
                        "width": "8px",
                      }
                    }
                  >
                     
                  </div>
                </Divider>
                <Styled(TextField)
                  className="toolbarElement"
                  disabled={false}
                  key="8"
                  onChange={[Function]}
                  placeholder="search"
                  sizing="normal"
                  style={
                    Object {
                      "height": "24px",
                    }
                  }
                  useclear={true}
                  value=""
                  visible={true}
                >
                  <TextField
                    className="toolbarElement sc-gZMcBi gXsQOQ"
                    disabled={false}
                    id=""
                    noborder={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onValidation={[Function]}
                    placeholder="search"
                    sizing="normal"
                    style={
                      Object {
                        "height": "24px",
                      }
                    }
                    type="text"
                    useclear={true}
                    usevalidation={false}
                    validators={Array []}
                    value=""
                    visible={true}
                  >
                    <div
                      className="ui-textfield-container textFieldContainer"
                    >
                      <div
                        className="ui-textfield textField normal toolbarElement sc-gZMcBi gXsQOQ"
                        style={
                          Object {
                            "border": "solid 1px silver",
                            "height": "24px",
                          }
                        }
                      >
                        <input
                          className="textFieldInput"
                          disabled={false}
                          id=""
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          placeholder="search"
                          style={
                            Object {
                              "height": "24px",
                            }
                          }
                          type="text"
                          value=""
                        />
                        <div
                          className="ui-textfield-clear-button clearButton normal"
                        >
                          <ButtonCircle
                            className=""
                            contentEditable={false}
                            direction="right"
                            disabled={false}
                            focus={false}
                            height=""
                            iconName="times"
                            iconStyle=""
                            id=""
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            onClick={[Function]}
                            selected={false}
                            sizing="small"
                            style={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#d9534f",
                                "color": "#d9534f",
                              }
                            }
                            testing={true}
                            theme={Object {}}
                            visible={true}
                            width=""
                            xcss={null}
                          >
                            <ThemeProvider
                              theme={
                                Object {
                                  "backgroundColor": "#ffffff",
                                  "borderColor": "#004358",
                                  "color": "#000000",
                                  "headerBackgroundColor": "#004358",
                                  "headerForegroundColor": "#ffffff",
                                  "hoverColor": "#c0c0c0",
                                }
                              }
                            >
                              <styled.div
                                className="ui-button-circle"
                              >
                                <div
                                  className="ui-button-circle sc-bwzfXH Rlnso"
                                >
                                  <styled.div
                                    height="18px"
                                    width="18px"
                                  >
                                    <div
                                      className="sc-htpNat cmTRcR"
                                      height="18px"
                                      width="18px"
                                    >
                                      <Styled(Button)
                                        className=""
                                        contentEditable={false}
                                        direction="right"
                                        disabled={false}
                                        focus={false}
                                        height=""
                                        iconName="times"
                                        iconStyle=""
                                        id=""
                                        location="none"
                                        noedit={false}
                                        nohover={false}
                                        noripple={false}
                                        onClick={[Function]}
                                        selected={false}
                                        sizing="small"
                                        style={
                                          Object {
                                            "backgroundColor": "#ffffff",
                                            "borderColor": "#d9534f",
                                            "color": "#d9534f",
                                          }
                                        }
                                        testing={true}
                                        theme={Object {}}
                                        visible={true}
                                        width=""
                                        xcss={null}
                                      >
                                        <Button
                                          className="sc-bxivhb fCnJYX"
                                          contentEditable={false}
                                          direction="right"
                                          disabled={false}
                                          focus={false}
                                          height=""
                                          iconName="times"
                                          iconStyle=""
                                          id=""
                                          location="none"
                                          noedit={false}
                                          nohover={false}
                                          noripple={false}
                                          onClick={[Function]}
                                          selected={false}
                                          sizing="small"
                                          style={
                                            Object {
                                              "backgroundColor": "#ffffff",
                                              "borderColor": "#d9534f",
                                              "color": "#d9534f",
                                            }
                                          }
                                          testing={true}
                                          theme={Object {}}
                                          visible={true}
                                          width=""
                                          xcss={null}
                                        >
                                          <ThemeProvider
                                            theme={
                                              Object {
                                                "backgroundColor": "#ffffff",
                                                "borderColor": "#004358",
                                                "color": "#000000",
                                                "headerBackgroundColor": "#004358",
                                                "headerForegroundColor": "#ffffff",
                                                "hoverColor": "#c0c0c0",
                                              }
                                            }
                                          >
                                            <styled.div
                                              className="ui-button ripple sc-bxivhb fCnJYX"
                                              disabled={false}
                                              onClick={[Function]}
                                              style={
                                                Object {
                                                  "backgroundColor": "#ffffff",
                                                  "borderColor": "#d9534f",
                                                  "color": "#d9534f",
                                                }
                                              }
                                              visible={true}
                                            >
                                              <div
                                                className="ui-button ripple sc-bxivhb fCnJYX sc-bdVaJa crSebe"
                                                disabled={false}
                                                onClick={[Function]}
                                                style={
                                                  Object {
                                                    "backgroundColor": "#ffffff",
                                                    "borderColor": "#d9534f",
                                                    "color": "#d9534f",
                                                  }
                                                }
                                              >
                                                <Icon
                                                  className=""
                                                  contentEditable={false}
                                                  direction="right"
                                                  disabled={false}
                                                  focus={false}
                                                  height=""
                                                  iconName="times"
                                                  id=""
                                                  imageFile=""
                                                  location="none"
                                                  noedit={false}
                                                  nohover={false}
                                                  noripple={false}
                                                  selected={false}
                                                  sizing="small"
                                                  style={Object {}}
                                                  testing={true}
                                                  theme={Object {}}
                                                  visible={true}
                                                  width=""
                                                  xcss={null}
                                                >
                                                  <ThemeProvider
                                                    theme={
                                                      Object {
                                                        "backgroundColor": "#ffffff",
                                                        "borderColor": "#004358",
                                                        "color": "#000000",
                                                        "headerBackgroundColor": "#004358",
                                                        "headerForegroundColor": "#ffffff",
                                                        "hoverColor": "#c0c0c0",
                                                      }
                                                    }
                                                  >
                                                    <Icon__FontAwesome
                                                      className="ui-icon fa fa-fw fa-times"
                                                      sizing="small"
                                                      style={Object {}}
                                                    >
                                                      <i
                                                        className="ui-icon fa fa-fw fa-times Icon__FontAwesome-kBRBjz ftTmck"
                                                        style={Object {}}
                                                      />
                                                    </Icon__FontAwesome>
                                                  </ThemeProvider>
                                                </Icon>
                                              </div>
                                            </styled.div>
                                          </ThemeProvider>
                                        </Button>
                                      </Styled(Button)>
                                    </div>
                                  </styled.div>
                                </div>
                              </styled.div>
                            </ThemeProvider>
                          </ButtonCircle>
                        </div>
                      </div>
                    </div>
                  </TextField>
                </Styled(TextField)>
              </div>
            </div>
          </Toolbar>
        </Styled(Toolbar)>
        <styled.div
          innerRef={[Function]}
        >
          <div
            className="sc-htoDjs ctMbKA"
          />
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</Browser>
`;

exports[`Test retrieval of the Browser props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "home": "about:blank",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClip": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": Object {},
  "uri": "about:blank",
  "useparser": false,
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
